src/objects/c2g__codaInvoiceInstallmentLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpinvoice</customHelpPage>
    <description>Installments of the payment schedule defined for the invoice.</description>
    <fields>
        <fullName>c2g__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The installment amount.</description>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <description>Installments of the payment schedule defined for the invoice.</description>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Invoice__c</fullName>
        <description>The auto-generated invoice number.</description>
        <label>Invoice Number</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipName>InvoiceInstallmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>InvoiceInstallmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sales Invoice Installment Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Invoice Installment Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoice Installment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>